--- a/src/index.html
+++ b/src/index.html
@@ -59,9 +59,9 @@
         </ms-splash-screen>
         <!-- / SPLASH SCREEN -->
 
-        <div id="main" class="animate-slide-up" ui-view="main" layout="column"></div>
-
-        <ms-theme-options></ms-theme-options>
+        <div id="main" ui-view="main" layout="column"></div>
+<!-- class="animate-slide-up" -->
+       <!-- <ms-theme-options></ms-theme-options> -->
 
         <!-- build:js(src) scripts/vendor.js -->
         <!-- bower:js -->
