--- a/.tmp/serve/index.html
+++ b/.tmp/serve/index.html
@@ -89,6 +89,7 @@
         <!-- inject:js -->
         <script src="app/quick-panel/quick-panel.module.js"></script>
         <script src="app/quick-panel/tabs/chat/chat-tab.controller.js"></script>
+        <script src="app/main/team/show/team-show.controller.js"></script>
         <script src="app/main/team/team.module.js"></script>
         <script src="app/main/team/dialogs/create-employee-dialog.controller.js"></script>
         <script src="app/core/core.module.js"></script>
@@ -120,9 +121,9 @@
         <script src="app/core/services/ms-utils.service.js"></script>
         <script src="app/core/services/ms-api.provider.js"></script>
         <script src="app/core/services/api-resolver.service.js"></script>
+        <script src="app/core/directives/highlight.directive.js"></script>
         <script src="app/core/filters/tag.filter.js"></script>
         <script src="app/core/filters/basic.filter.js"></script>
-        <script src="app/core/directives/highlight.directive.js"></script>
         <script src="app/core/config/fuse-config.provider.js"></script>
         <script src="app/toolbar/toolbar.module.js"></script>
         <script src="app/toolbar/toolbar.controller.js"></script>
