--- a/.tmp/serve/index.html
+++ b/.tmp/serve/index.html
@@ -13,6 +13,7 @@
         <!-- bower:css -->
         <link rel='stylesheet' href='../bower_components/perfect-scrollbar/css/perfect-scrollbar.css' />
         <link rel='stylesheet' href='../bower_components/toastr/toastr.css' />
+        <link rel='stylesheet' href='../bower_components/angular-moment-picker/dist/angular-moment-picker.min.css' />
         <!-- endbower -->
         <!-- endbuild -->
 
@@ -84,6 +85,7 @@
         <script src="../bower_components/toastr/toastr.js"></script>
         <script src="../bower_components/angular-filter/dist/angular-filter.min.js"></script>
         <script src="../bower_components/lodash/lodash.js"></script>
+        <script src="../bower_components/angular-moment-picker/dist/angular-moment-picker.min.js"></script>
         <!-- endbower -->
         <!-- endbuild -->
 
@@ -110,9 +112,9 @@
         <script src="app/quick-panel/quick-panel.controller.js"></script>
         <script src="app/toolbar/toolbar.controller.js"></script>
         <script src="app/core/config/fuse-config.provider.js"></script>
+        <script src="app/core/directives/highlight.directive.js"></script>
         <script src="app/core/filters/basic.filter.js"></script>
         <script src="app/core/filters/tag.filter.js"></script>
-        <script src="app/core/directives/highlight.directive.js"></script>
         <script src="app/core/services/api-resolver.service.js"></script>
         <script src="app/core/services/ms-api.provider.js"></script>
         <script src="app/core/services/ms-utils.service.js"></script>
@@ -129,6 +131,7 @@
         <script src="app/teamify-core/filters/basic.filter.js"></script>
         <script src="app/teamify-core/filters/moment.filter.js"></script>
         <script src="app/core/directives/ms-card/ms-card.directive.js"></script>
+        <script src="app/core/directives/ms-datepicker-fix/ms-datepicker-fix.directive.js"></script>
         <script src="app/core/directives/ms-form-wizard/ms-form-wizard.directive.js"></script>
         <script src="app/core/directives/ms-material-color-picker/ms-material-color-picker.directive.js"></script>
         <script src="app/core/directives/ms-nav/ms-nav.directive.js"></script>
@@ -140,11 +143,11 @@
         <script src="app/core/directives/ms-sidenav-helper/ms-sidenav-helper.directive.js"></script>
         <script src="app/core/directives/ms-splash-screen/ms-splash-screen.directive.js"></script>
         <script src="app/core/directives/ms-stepper/ms-stepper.directive.js"></script>
-        <script src="app/core/directives/ms-timeline/ms-timeline.js"></script>
-        <script src="app/core/directives/ms-datepicker-fix/ms-datepicker-fix.directive.js"></script>
         <script src="app/core/directives/ms-widget/ms-widget.directive.js"></script>
+        <script src="app/core/directives/ms-timeline/ms-timeline.js"></script>
         <script src="app/main/team/dialogs/create-employee-dialog.controller.js"></script>
         <script src="app/main/team/show/team-show.controller.js"></script>
+        <script src="app/main/timecards/dialogs/create-timecard-dialog.js"></script>
         <script src="app/quick-panel/tabs/chat/chat-tab.controller.js"></script>
         <script src="app/main/team/show/dialogs/create-file-entry-dialog.js"></script>
         <script src="app/main/team/show/dialogs/edit-user-dialog-controller.js"></script>
